[package]
name = "aqm-supervisor"
version = "0.1.0"
edition = "2021"

# Volontairement sans dependances externes (std uniquement) pour un
# build Yocto simple et robuste en v1: on interroge systemd via la
# commande `systemctl show`, deja presente sur toute image systemd.
# v2 possible: bascule vers zbus (D-Bus natif) sans changer l'API
# publique du socket aqm-supervisor.

[[bin]]
name = "aqm-supervisor"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
